--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "node src/server.js"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "node-fetch": "^3.4.0"
   }
 }
