--- a/package.json
+++ b/package.json
@@ -1,10 +1,7 @@
 {
   "name": "fim-distribution",
   "version": "1.0.0",
-  "main": "src/server.js",
-  "scripts": {
-    "start": "node src/server.js"
-  },
+  "type": "module",
   "dependencies": {
     "express": "^4.18.2",
     "node-fetch": "^3.3.2"
