--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "express": "^4.18.2",
     "bcryptjs": "^2.4.3",
+    "jsonwebtoken": "^9.0.2",
     "@neondatabase/serverless": "^0.8.0"
   }
 }
