--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,14 @@
-node_modules
+# Dependencies
+node_modules/
+
+# Debug logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Environment variables
+.env
+
+# System files
+.DS_Store
+Thumbs.db
