--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "1.0.0",
   "type": "module",
   "dependencies": {
-    "express": "^4.18.2",
+    "@neondatabase/serverless": "^0.8.0",
     "bcryptjs": "^2.4.3",
+    "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
-    "@neondatabase/serverless": "^0.8.0"
+    "ws": "^8.19.0"
   }
 }
