--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "bcryptjs": "^2.4.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
-    "pusher": "^5.3.2",
-    "ws": "^8.19.0"
+    "pusher": "^5.3.2"
   }
 }
